# scholar_vision

./: .dockerignore  .env.example  .gitignore  ActivityDataInstructions.md  Dockerfile  HealhDataInstructions.md  INSTRUCTIONS.md  ImportExplained.MD  LICENSE  METRICS.md  PRESENTATION.md  README.md  docker-compose.yaml  main.py  ml_engine.py  mock_cohort_data.csv  pyproject.toml  security.py  updates.md
database/: cohort.py  connection.py  execute.py
front-end/: index.html  loginpage.html  package-lock.json  package.json  register.py
front-end/src/: App.jsx  index.css
front-end/src/components/: AppUsage.jsx  AttentionSpan.jsx  AuthModal.css  AuthModal.jsx  Dashboard.css  Dashboard.jsx  DataGraph3D.css  DataGraph3D.jsx  FileImport.css  FileImport.jsx  HealthImport.css  HealthImport.jsx  HeroGraph3D.css  HeroGraph3D.jsx  HeroPage.css  HeroPage.jsx  PeerGraph3D.css  PeerGraph3D.jsx  PredictionPanel.css  PredictionPanel.jsx  StudyTracker.jsx  SubPanel.css  ThemeSwitcher.css  ThemeSwitcher.jsx
front-end/src/context/: AuthContext.jsx  ThemeContext.jsx
init_DB/: db.sql
models/: dt.joblib  knn.joblib
parsers/: app_usage_parser.py  file_parser.py  health_parser.py  study_parser.py
routers/: activity.py  auth.py  files.py  health.py  peers.py  predictions.py  profile.py
scripts/: generate_mock_cohort.py  seed_db.py  seed_test_user.py
uploads/: 9ce72838-18b9-462d-b76d-ce75cf1aa6f1.txt  a3ff566a-8f08-4877-8031-3ea84bf068d5.txt
